deploy/app/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bf42-notifications
  namespace: bf42-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bf42-notifications
  template:
    metadata:
      labels:
        app: bf42-notifications
    spec:
      priorityClassName: 1942-services
      containers:
        - name: notifications
          image: anskia/bfstats-notifications:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "384Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: bf42-notifications-service
  namespace: bf42-stats
  labels:
    app: bf42-notifications
spec:
  selector:
    app: bf42-notifications
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: api
